--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <version>15.4</version>
     </dependency>
     <dependency>
+      <groupId>org.python</groupId>
+      <artifactId>jython-slim</artifactId>
+      <version>2.7.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>5.10.3</version>
