--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
     </dependency>
     <dependency>
       <groupId>org.python</groupId>
-      <artifactId>jython-slim</artifactId>
+      <artifactId>jython-standalone</artifactId>
       <version>2.7.3</version>
     </dependency>
     <dependency>
