--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
     <url>http://github.com/gdcc/exporter-transformer/tree/main</url>
   </scm>
 
+  <properties>
+    <jdk.version>17</jdk.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>io.github.erykkul</groupId>
