--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.gdcc.export</groupId>
   <artifactId>exporter-transformer</artifactId>
-  <version>1.0.5-SNAPSHOT</version>
+  <version>1.0.6-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Dataverse Transformer Exporter</name>
@@ -53,6 +53,11 @@
       <groupId>org.python</groupId>
       <artifactId>jython-standalone</artifactId>
       <version>2.7.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.guicedee.services</groupId>
+      <artifactId>org.apache.fop</artifactId>
+      <version>1.2.2.1-jre17</version>
     </dependency>
   </dependencies>
   <build>
