added clean step to the workflows

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,5 +19,8 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
+      - name: clean
+        run: mvn clean
+        
       - name: Build, test, analyze
         run: mvn -B verify -Psingle
