--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.gdcc.export</groupId>
   <artifactId>exporter-transformer</artifactId>
-  <version>1.0.8</version>
+  <version>1.0.8-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Dataverse Transformer Exporter</name>
