--- a/examples/py_croissant/config.json
+++ b/examples/py_croissant/config.json
@@ -1,7 +1,7 @@
 {
-    "formatName": "py_croissant",
+    "formatName": "cdif",
     "harvestable": false,
     "availableToUsers": true,
     "mediaType": "application/json",
-    "displayName": "Croissant py"
+    "displayName": "CDIF"
 }
